# XJU-Position

./: README.md
Code/.eide/: eide.json
Code/Drivers/CMSIS/Device/ST/STM32F1xx/Include/: stm32f103xb.h
Code/Drivers/CMSIS/Device/ST/STM32F1xx/Source/Templates/arm/: startup_stm32f103xe.s
Code/Middlewares/wit_c_sdk/: REG.h  wit_c_sdk.c  wit_c_sdk.h  wit_decode.c  wit_decode.h
Code/User/Application/Inc/: includes.h  stm32f1xx_hal_conf.h
Code/User/Application/Src/: main.c  package_data.c  position_calc.c
Code/User/Bsp/OnBoard/Inc/: as5047.h  bsp.h  encoder.h  led.h  sample_timer.h  send_timer.h
Code/User/Bsp/OnBoard/Src/: as5047.c  bsp.c  encoder.c  led.c  sample_timer.c  send_timer.c
Code/User/Bsp/OnChip/Inc/: bsp_spi.h  bsp_uart.h
Code/User/Bsp/OnChip/Src/: bsp_dma_uart.c  bsp_spi.c  bsp_uart.c  retarget_io.c
PCB/: .gitignore  Encoder.PcbDoc  Encoder.PrjPcb  Encoder.PrjPcbStructure  Encoder.SchDoc  Main.PcbDoc  Main.SchDoc  XJU-Position.PrjPcb  prj-pcblib.PcbLib  prj-schlib.SCHLIB
Upper/: .gitignore  CMakeLists.txt  caliEncWindow.cpp  caliEncWindow.h  caliEncWindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
